--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>Responsive chips website - Bedimcode</title>
+    <title>Responsive chips website</title>
   </head>
   <body>
     <!--==================== HEADER ====================-->
